--- a/fly.toml
+++ b/fly.toml
@@ -7,21 +7,28 @@ app = 'fiber-chat'
 primary_region = 'mad'
 
 [build]
-  [build.args]
-    GO_VERSION = '1.23.1'
+[build.args]
+GO_VERSION = '1.23.1'
 
 [env]
-  PORT = '8080'
+
+PORT = '8080'
+DATABASE_PATH = "/mnt/sqlite-db-volume/prod.db"
 
 [http_service]
-  internal_port = 8080
-  force_https = true
-  auto_stop_machines = 'stop'
-  auto_start_machines = true
-  min_machines_running = 0
-  processes = ['app']
+internal_port = 8080
+force_https = true
+auto_stop_machines = 'stop'
+auto_start_machines = true
+min_machines_running = 0
+processes = ['app']
 
 [[vm]]
-  memory = '1gb'
-  cpu_kind = 'shared'
-  cpus = 1
+memory = '1gb'
+cpu_kind = 'shared'
+cpus = 1
+
+
+[mounts]
+source = "sqlite_db"
+destination = "/mnt/sqlite-db-volume"
